--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,5 +1,5 @@
-{{!-- The following component displays Ember's default welcome message. --}}
-<WelcomePage />
-{{!-- Feel free to remove this! --}}
-
+<nav>
+  <LinkTo @route="purchases">Purchases</LinkTo>
+  <LinkTo @route="comments">Recent Comments</LinkTo>
+</nav>
 {{outlet}}
